- Added support for new key `process.exit` that is triggered when process `process.name` is killed
- Load script `/java/etc/initd.sh` run with super-user permissions
- New X11 Screen **edit**
- When X11 stops, it drops all saved screens
- Command `gauge` removed, usage `x11 gauge`
- Class `OpenTTY$HTopViewer` renamed to `Monitor`
- Command `query` now linked with an PID to stop the activities
- If header **[ Config ]** is found in first line of script, MIDlet will treat this as an Application
- Command `ls` hide files that has prefix **.** in all filesystems
- Audio codec can play audio files from **JAR** Package.
- **Nano Editor** and **History** Threads joined into Main Thread
- File Explorer Window title changed to current path
- Command `title hide` hide MIDlet Main Window title
- Player Object non referred in globals, traced by Process
- X11 Support symbolic links loading and saving by Virtual Process **PID**
- Command `nc`, `prscan` and `gobuster` ask if you want keep thread alive before close window
- File Explorer don't using icons anymore
- MIDlet Suite can adapt loading for emulations if found an environment key called as **J2EMU**

[ _Notes_ ]

- If you are logged as **root** command `logout` and `exit` will return you to normal user.
- All jobs started with super user permissions and it sub-process get the permissions.
- Remote shells interfaces cannot be loaded with super user permissions by default.
- X11 Screens couldn't be called with `sudo`.
- After you change max **stdout** size, remote interfaces like `bind` can be directly damaged by **stdout** redirect.

[ _X11 Virtual Screens_ ]

Usage: `x11 [ option ] [PID]`
- `import`: load a screen referred into Virtual Process
- `export`: save current screen in a Virtual Process

[ _MIDlets_ ]

- **Default Package**: Native OpenTTY MIDlet with all tools and updates of this release
- **Lua Release**: OpenTTY MIDlet with support for Lua VM